# Apre_Aut_CEIoT

./: .gitignore  CriteriosAprobacion.md  README.md  pyproject.toml
clase1/: README.md
clase2/: README.md
clase2/ejercicios/: 1 - Ejercicios Python.ipynb  2 - Ejercicios Numpy.ipynb  3 - Ejercicios Matplotlib.ipynb
clase2/jupyter_notebooks/: 1 - Primera Notebook.ipynb  2 - Usando Python.ipynb  3 - Usando Numpy.ipynb
clase3/: README.md
clase3/ejercicios/: 3 - Ejercicios Matplotlib.ipynb  4 - Ejercicios Pandas - Homeless.ipynb  5 - Ejercicios Pandas - Temperatura.ipynb  6 - Ejercicios Pandas - Aprender 2018.ipynb  7 - Ejercicios Pandas - Estadística Descriptiva.ipynb  8 - Ejercicios Pandas - Agrupamiento.ipynb
clase3/jupyter_notebooks/: 10 - Graficando con Pandas.ipynb  11 - Usando Seaborn.ipynb  4 - Usando Pandas - Introduccion.ipynb  5 - Usando Pandas - Operando.ipynb  6 - Usando Pandas - Combinando datos.ipynb  7 - Usando Pandas - Agrupando datos.ipynb  8 - Usando Pandas - Fuentes de Datos.ipynb  9 - Usando Matplotlib.ipynb
clase3/teoria/: clase3.pptx
clase3/trabajo_practico_1/: README.md
clase4/: README.md
clase4/ejercicio/: README.md  ayuda.ipynb
clase4/jupyter_notebooks/: modelo_marketing.pkl  regresion.ipynb
clase4/teoria/: clase4.pptx
clase5/: README.md
clase5/jupyter_notebooks/: auxiliary.py  clasificacion.ipynb
clase5/trabajo_practico_2/: README.md  ayuda.ipynb
clase6/: README.md
clase6/ejercicios/: README.md
clase6/jupyter_notebooks/: svm.ipynb
clase6/teoria/: clase6.pptx
clase7/: README.md
clase8/: README.md
(+8 files in other folders)
